--- a/index.css
+++ b/index.css
@@ -1,6 +1,36 @@
+
+
 nav {
-	background: linear-gradient(90deg, rgba(63,63,97,1) 0%, rgba(73,43,193,1) 49%, rgba(61,61,96,1) 100%);
+	background: black;
+	font-family: 'Roboto Condensed', sans-serif;
+	cursor: pointer;
 }
+button {
+	width: 200px;
+	padding: 15px 0;
+	text-align: center;
+	margin: 20px 10px;
+	border-radius: 25px;
+	font-weight: bold;
+	border: 2px solid #009688;
+	background: transparent;
+	color: #fff;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+}
+
+span{
+	background: #009688;
+	height: 100%;
+	weight: 100%;
+	border-radius:  25px;
+	position:  absolute;
+	left: 0;
+	bottom: 0;
+	z-index: -1;
+}
+
 
 nav ul li a{
 	text-decoration: none;
@@ -10,14 +40,137 @@ nav ul li a{
 
 nav ul li a::after {
 	content: '';
-	width: 100%;
+	width: 0;
 	height: 3px;
 	background: #ff004f;
 	position: absolute;
 	left: 0;
-	bottom: -6px;
+	bottom: 2px;
 	transition: 0.5s;
 }
 nav ul li a:hover::after{
 	width: 100%;
+}
+
+body {
+	color: white;
+	margin: 0;
+	width: 100vw;
+	height: 100vh;
+	text-shadow: 8px 8px 10px #0000008c;
+	background-color: #343a40;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+ 	background-attachment: fixed;
+ 		
+}
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
+#nav-logo {
+	width: 12rem;
+	height: 5rem;
+	margin-left: 20px;
+}
+
+#first-name {
+	font-size: 3.5rem;
+	font-weight: 800;
+	color: transparent;
+	-webkit-text-stroke: 1px #fff;
+
+}
+
+#opening{
+	font-size: 2rem;
+}
+
+#description{
+	font-size: 2rem;
+}
+
+#responsibility {
+	font-size: 1rem;
+}
+
+#row {
+	align-items: center;
+	margin-top: 30px;
+}
+
+#row #a{
+	color: white;
+	text-decoration: none;
+	padding: 10px 10px;
+	margin-right: 5px;
+	border: 2px solid white;
+}
+#row #b{
+	color: white;
+	text-decoration: none;
+	padding: 10px 10px;
+	margin-right: 10px;
+	border: 2px solid white;
+}
+
+#about-me{
+	margin-top: 150px;
+}
+
+#project-section {
+	margin-top: 5px;
+}
+
+#monkey {
+	height: 20rem;
+}
+
+#music{
+	font-size: 50px;
+	color: black;
+}
+#chess{
+	font-size: 50px;
+	color: black;
+}
+
+#art{
+	font-size: 50px;
+	color: black;
+}
+
+#project-section{
+	margin-top:80px;
+	font-size: 3.5rem;
+	font-weight: 800;
+	color: transparent;
+	-webkit-text-stroke: 1px #fff;
+}
+
+#navbarNav{
+	color: white;
+}
+
+#spacing1 {
+	margin-top: 150px;
+}
+#spacing2 {
+	margin-top: 300px;
+}
+#spacing3 {
+	margin-top: 180px;
+}
+
+#contact-box {
+	margin-top: 200px;
+
+}
+
+#tools1{
+	margin-top: 200px;
+}
+#home {
+	margin-top: 100px;
 }
